kubernetes/media/jellyfin/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  namespace: media
spec:
  serviceName: "jellyfin"
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      automountServiceAccountToken: false
      containers:
        # Container
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.10
          # Resources
          resources:
            requests:
              gpu.intel.com/i915: "1"
              cpu: "1"
              memory: 1Gi
              ephemeral-storage: 256Gi
            limits:
              gpu.intel.com/i915: "1"
              cpu: "4"
              memory: 4Gi
              ephemeral-storage: 256Gi
          # Ports
          ports:
            - name: jellyfin-http
              containerPort: 8096
              protocol: TCP
          # Probes
          livenessProbe:
            httpGet:
              path: /health
              port: jellyfin-http
          readinessProbe:
            httpGet:
              path: /
              port: jellyfin-http
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: jellyfin-data
              mountPath: /config
            - name: homelab-nfs
              mountPath: /mnt/media
      volumes:
        - name: homelab-nfs
          nfs:
            server: nas.mcmumf.dev
            path: /volume1/library
  volumeClaimTemplates:
    - metadata:
        name: jellyfin-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "openebs"
        resources:
          requests:
            storage: 32Gi
