kubernetes/media/jellyfin/external-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-external-http-route
  namespace: media
  labels:
    app: jellyfin
spec:
  parentRefs:
    - name: external-gateway
      namespace: kube-system
  hostnames:
    - "jellyfin.mcmumf.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
