kubernetes/media/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/client-max-body-size: "20m"
    gethomepage.dev/description: Manage zigbee devices
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: https://raw.githubusercontent.com/jellyfin/jellyfin-ux/refs/heads/master/branding/SVG/icon-transparent.svg
    gethomepage.dev/name: Jellyfin
    gethomepage.dev/pod-selector: "app=jellyfin"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jellyfin.mcmumf.dev
      secretName: jellyfin.mcmumf.dev-tls
  rules:
    - host: jellyfin.mcmumf.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
