kubernetes/media/jellyfin/internal-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-internal-http-route
  namespace: media
  annotations:
    gethomepage.dev/description: Our Media Library
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: https://raw.githubusercontent.com/jellyfin/jellyfin-ux/refs/heads/master/branding/SVG/icon-transparent.svg
    gethomepage.dev/name: Jellyfin
    gethomepage.dev/pod-selector: "app=jellyfin"
    gethomepage.dev/href: "https://jellyfin.mcmumf.dev"
  labels:
    app: jellyfin
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
  hostnames:
    - "jellyfin.mcmumf.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
